update downloadFile TrainingProgram